syntax = "proto3";
package purekit;

message DatabaseRecord {
    uint32 version = 1;
    bytes record = 2;
}

message EnrollmentRequest{
    uint32 version = 1;
}

message EnrollmentResponse{
    uint32 version = 1;
    bytes response = 2;
}

message VerifyPasswordRequest{
    uint32 version = 1;
    bytes request = 2;
}

message VerifyPasswordResponse{
    bytes response = 1;
}

message VersionedUpdateToken{
    uint32 version = 1;
    bytes update_token = 2;
}

message HttpError {
    uint32 code = 1;
    string message = 2;
}